--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,7 @@
 
 server {
     listen    443 ssl;
+    ssl    on;
     server_name       swap-face.xyz;
     ssl_certificate   ssl/cert.pem;
     ssl_certificate_key   ssl/key.pem;
