--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@
 ##    networks:
 ##      - main
 ##
-##  celery-worker:
-##    build: .
-##    command: celery -A notification worker -l info
-##    volumes:
-##      - .:/app
-##    environment:
-##      - DJANGO_SETTINGS_MODULE=notification.settings
-##    depends_on:
-##      - redis
+#  celery-worker:
+#    build: .
+#    command: celery -A notification worker -l info
+#    volumes:
+#      - .:/app
+#    environment:
+#      - DJANGO_SETTINGS_MODULE=notification.settings
+#    depends_on:
+#      - redis
 ##
 ##  celery-beat:
 ##    build: .
@@ -45,8 +45,8 @@
 ##      - ./nginx.conf:/etc/nginx/nginx.conf
 ##
 ##
-##  redis:
-##    image: "redis:alpine"
+#  redis:
+#    image: "redis:alpine"
 ##
 ##networks:
 ##  main:
@@ -93,6 +93,29 @@ services:
       - "443:443"
     depends_on:
       - django_gunicorn
+
+  celery-worker:
+    build: .
+    command: celery -A notification worker -l info
+    volumes:
+      - .:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=notification.settings
+    depends_on:
+      - redis
+
+  celery-beat:
+    build: .
+    command: celery -A notification beat -l info
+    volumes:
+      - .:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=notification.settings
+    depends_on:
+      - redis
+
+  redis:
+    image: "redis:alpine"
 
 volumes:
   static:
